--- a/views/index.hbs
+++ b/views/index.hbs
@@ -7,20 +7,24 @@
         <div class="dropdown col d-grid gap-2" style="max-width:fit-content;">
           <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown"
             aria-expanded="false">
-            支出類別
+            支出類別/方式
           </button>
           <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-            <li><a class="dropdown-item" href="/">A->Z</a></li>
-            <li><a class="dropdown-item" href="/sorts/nameZtoA">Z->A</a></li>
-            <li><a class="dropdown-item" href="/sorts/category">Category</a></li>
-            <li><a class="dropdown-item" href="/sorts/location">Region</a></li>
+            <li><a class="dropdown-item" href="/categories/living">家居物業</a></li>
+            <li><a class="dropdown-item" href="/categories/transportation">交通出行</a></li>
+            <li><a class="dropdown-item" href="/categories/entertainment">休閒娛樂</a></li>
+            <li><a class="dropdown-item" href="/categories/food">餐飲食品</a></li>
+            <li><a class="dropdown-item" href="/categories/others">其他類別</a></li>
+            <li><a class="dropdown-item" href="/methods/cash">現金支付</a></li>
+            <li><a class="dropdown-item" href="/methods/card">信用卡支付</a></li>
+            <li><a class="dropdown-item" href="/methods/mobile">行動支付</a></li>
           </ul>
         </div>
       </div>
       
       <!--顯示花費金額-->
       <div class="total-expenses d-flex justify-content-center align-items-center mt-3">
-        <h3 class="text-center mx-3 ">累計:</h3>
+        <h3 class="text-center mx-3 ">累計花費:</h3>
         <h1 style="font-weight: bolder;color: #F2668B">{{totalAmount}}</h1>
       </div>
       
@@ -36,17 +40,15 @@
                 <h4 class="mb-0" style="display: inline; vertical-align: middle;">{{this.name}}</h4>
                 <span class="mt-0">{{this.date}}</p>
               </div>
+              <mark class="mx-4" style="font-size: 18px;">{{this.method}}</mark>
             </div>
             
-            
-            <div class="col-auto d-flex align-items-center">
-              
+           
+            <div class="col-auto d-flex align-items-center"> 
               <!-- 支出金額 -->
               <div class="amount mx-5">
                 <h3>{{this.amount}}</h3>
               </div>
-
-              
               <!-- 編輯和刪除按鈕 -->
               <a class="btn btn-success mx-2" href="/records/{{this._id}}/edit">Edit</a>
               <form action="/records/{{this._id}}?_method=DELETE" method="POST" style="display: inline;">
