--- a/views/new.hbs
+++ b/views/new.hbs
@@ -43,11 +43,9 @@
           <input list="category" class="form-control" name="categoryName" id="categories" placeholder="請選擇支出類別"
             style="padding:5px 15px; background:#D8FFDB; border:0 none; cursor:pointer; -webkit-border-radius: 5px; border-radius: 5px;">
           <datalist id="category">
-            <option>家居物業</option>
-            <option>交通出行</option>
-            <option>休閒娛樂</option>
-            <option>餐飲食品</option>
-            <option>其他</option>
+            {{#each categories}}
+            <option>{{this.categoryName}}</option>
+            {{/each}}
           </datalist>
         </div>
       </div>
