--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -15,7 +15,7 @@
     <nav class="navbar navbar-info bg-info">
       <div class="container-fluid d-flex justify-content-between">
         <a class="navbar-brand" href="/" style="color: #024554; font-weight: bolder">記帳本</a>
-        <a href="/" class="btn btn-success">Login</a>
+        <a href="/users/login" class="btn btn-success">Login</a>
       </div>
     </nav>
   </main>
