--- a/views/register.hbs
+++ b/views/register.hbs
@@ -4,21 +4,21 @@
       <h1 class="text-center mt-3">Register</h1>
       <form action="/users/register" method="POST">
         <div class="form-group mt-3 mb-2">
-          <label for="name">Name</label>
+          <span class="required mx-1" style="color: red;">*</span><label for="name">Name</label>
           <input type="text" id="name" name="name" class="form-control" placeholder="e.g. Kent Guo" value="{{name}}">
         </div>
         <div class="form-group mt-3 mb-2">
-          <label for="email">Email</label><span class="required" style="color: red;">*</span>
+          <span class="required mx-1" style="color: red;">*</span><label for="email">Email</label>
           <input type="email" id="email" name="email" class="form-control" placeholder="example@email.com"
             value="{{email}}">
         </div>
         <div class="form-group mt-3 mb-2">
-          <label for="password">Password</label><span class="required" style="color: red;">*</span>
+          <span class="required mx-1" style="color: red;">*</span><label for="password">Password</label>
           <input type="password" id="password" name="password" class="form-control" placeholder="Password"
             value="{{password}}">
         </div>
         <div class="form-group mt-3 mb-2">
-          <label for="confirmPassword">Confirm Password</label><span class="required" style="color: red;">*</span>
+          <span class="required mx-1" style="color: red;">*</span><label for="confirmPassword">Confirm Password</label>
           <input type="password" id="confirmPassword" name="confirmPassword" class="form-control"
             placeholder="Confirm Password" value="{{confirmPassword}}">
         </div>
