feat: add logout route

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -30,6 +30,9 @@
         <h1 style="font-weight: bolder;color: #F2668B">{{totalAmount}}</h1>
       </div>
       
+      <!-- 臨時logout -->
+      <a href="/users/logout">logout</a>
+
       {{#each records}}
       <!-- 支出清單 -->
       <ul class="list-group">
