--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -18,9 +18,9 @@
         <a class="navbar-brand" href="/" style="color: #024554; font-weight: bolder">{{#if isAuthenticated}} {{user.name}}的{{/if}}記帳本</a>
         
         {{#if isAuthenticated}}
-        <a href="/users/logout" class="btn btn-outline-light">Logout</a>
+        <a href="/users/logout" class="btn btn-outline-light">登出</a>
         {{else}}
-        <a href="/users/login" class="btn btn-outline-light">Login</a>
+        <a href="/users/login" class="btn btn-outline-light">登入</a>
         {{/if}}
       </div>
     </nav>
