--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,24 +1,24 @@
 <div class="row mt-5">
   <div class="col-md-6 m-auto">
     <div class="card card-body">
-      <h1 class="text-center mt-3">Login</h1>
+      <h1 class="text-center mt-3">登入帳號</h1>
       {{> message}}
       <form action="/users/login" method="POST">
         <div class="form-group mt-3 mb-2">
-          <label for="email">Email</label>
+          <label for="email">電子郵件地址</label>
           <input type="email" id="email" name="email" class="form-control" placeholder="example@email.com">
         </div>
         <div class="form-group mt-3 mb-2">
-          <label for="password">Password</label>
-          <input type="password" id="password" name="password" class="form-control" placeholder="password">
+          <label for="password">密碼</label>
+          <input type="password" id="password" name="password" class="form-control" placeholder="請輸入您的密碼...">
         </div>
         <div class="login-btn text-center mt-3">
-          <button type="submit" class="form-control btn btn-info btn-block mb-2">Login</button>
-          <a href="/auth/facebook" class="form-control btn btn-secondary btn-block mb-2">Facebook Login</a>
+          <button type="submit" class="form-control btn btn-info btn-block mb-2">登入</button>
+          <a href="/auth/facebook" class="form-control btn btn-secondary btn-block mb-2">透過Facebook登入</a>
         </div>
       </form>
       <p class="lead mt-4">
-        No Account? <a href="/users/register">Register</a>
+        尚未擁有帳號？ <a href="/users/register">註冊帳號</a>
       </p>
     </div>
   </div>
